# Praxis

./: .gitignore  CHANGELOG.md  COLLABORATE.md  README.md  README.org  app.json  eas.json  localizations.tsx  package-lock.json  package.json  translations.json
app/: +not-found.tsx  _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  evening-prayers.tsx  index.tsx  morning-prayers.tsx  settings.tsx
app/(tabs)/home/: _layout.tsx  index.tsx
app/(tabs)/settings/: _layout.tsx  about.tsx  index.tsx
assets/orthocal-fetches/: gregorian_en.json  gregorian_pt.json  julian_en.json  julian_pt.json
assets/orthocal-fetches/gregorian_en_2024/: gregorian_en_2024-01.json  gregorian_en_2024-02.json  gregorian_en_2024-03.json  gregorian_en_2024-04.json  gregorian_en_2024-05.json  gregorian_en_2024-06.json  gregorian_en_2024-07.json  gregorian_en_2024-08.json  gregorian_en_2024-09.json  gregorian_en_2024-10.json  gregorian_en_2024-11.json  gregorian_en_2024-12.json
components/: CommonSlider.tsx  DaySlider.tsx  NavButton.tsx  NavigationLink.tsx  Orthocal.tsx  Pagination.tsx  SliderItem.tsx  SliderItemDay.tsx
constants/: CalContext.tsx  CommonPrayerSliderData.tsx  CommunionPrayersSliderData.tsx  GlobalCalProvider.tsx  LanguageContext.tsx  Provider.tsx  orthocal-julian-pt__20240928-20250426.json  textStyle.tsx
praxis-builder/: Cargo.toml  README.md  content.toml  pyproject.toml  test.json
praxis-builder/praxis_builder/: pb.py
praxis-builder/src/: calendar.rs  headings.rs  main.rs
praxis-builder/src/page_content/: mod.rs
screenshots/: screenshots.md
(+154 files in other folders)
